# neura-hustle-tracker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  compose.yml  install-extension.sh  test_monitor.rs
gnome-extension/: extension.js  metadata.json
scripts/: windows-install.ps1
src/: daemon_main.rs  main.rs
src/active_window/: daemon.rs
src/config/: settings.rs
src/daemon/: mod.rs
src/daemon/active_window/: daemon.rs
src/daemon/database/: connection.rs
src/daemon/tracker/: macos_inspection.rs  mod.rs  monitor.rs  parser.rs  windows_inspection.rs
src/database/: connection.rs
src/database/migrations/: 20231019000000_initial_schema.sql  20251020000000_add_parsed_data_columns.sql  20251030000000_add_idle_tracking.sql
src/models/: session.rs
src/scripts/: uninstall.sh
src/scripts/startup/: neura-tracker.bat  neura-tracker.desktop  neura-tracker.plist
src/scripts/windows_build/: windows-install.ps1  windows-oneline-install.ps1  windows-uninstall.ps1
src/tests/: test_idle.rs  test_idle_gap_afk.rs
src/tracker/: mod.rs  monitor.rs  process_inspection.rs
src/ui/: app.rs  commands.rs  hierarchical.rs  mod.rs  parser.rs  render.rs  session.rs  tracking.rs
src/utils/: mod.rs
