[package]
name = "neura_hustle_tracker"
version = "0.3.4"
edition = "2024"

[[bin]]
name = "neura_hustle_tracker"
path = "src/main.rs"

[[bin]]
name = "neura_hustle_daemon"
path = "src/daemon_main.rs"

[dependencies]
active-win-pos-rs = "0.9.1"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
clap = "4.5.49"
rdev = "0.5"
crossterm = "0.29.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
